--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,123 +6,12 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 156.225.67.114
-    port: 443
-    cipher: auto
-    uuid: b8df3ef1-887f-4ee4-855f-4f80416c2464
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1695809872050
-      headers:
-        host: www.12460158.xyz
-  - &id002
-    name: 🇺🇸_US_美国->🇨🇱_CL_智利
-    type: vmess
-    server: fd.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 53701585-591f-48a3-9515-8831ed0524ac
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sdyg.shabijichang.com
-  - &id003
-    name: 🇬🇧_GB_英国
-    type: ss
-    server: 51.89.206.18
-    port: 80
-    password: 7Mb2TN5PhBxI2R2FujtrnR
-    cipher: chacha20-ietf-poly1305
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 156.225.67.48
-    port: 45493
-    cipher: auto
-    uuid: 3ca912da-6ac2-418f-b9cf-45b6f694579b
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 45.199.138.206
-    port: 44094
-    cipher: auto
-    uuid: 20b30916-e203-412e-8ec0-900f3acd5128
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡_1
-    type: vmess
-    server: 104.16.68.38
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lu.wx.alue.link
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: ss
-    server: starspeed.tbh.iosds.com
-    port: 19290
-    password: 3b83e1b4-f8c7-47b9-8c72-e18243d18aa1
-    cipher: chacha20-ietf-poly1305
-  - &id008
-    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡_2
-    type: vmess
-    server: 162.159.152.6
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lu.wx.alue.link
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 66.241.124.229
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
-  - &id010
     name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
-    server: 162.159.129.245
-    port: 8080
+    server: yd1.992688.xyz
+    port: 8880
     cipher: auto
-    uuid: fbe45fb6-7cf1-40f0-880d-fcb5b0bfbbf3
+    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -130,147 +19,135 @@ proxies:
     ws-opts:
       path: /?ed=2048
       headers:
-        host: eu5.vpn66.eu.org
-  - &id011
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+        host: vceu3.vpn66.eu.org
+  - &id002
+    name: 🇨🇾_CY_塞浦路斯->🇩🇪_DE_德国
     type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
+    server: csgo.com
+    port: 443
     cipher: auto
-    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    uuid: 6383e7fb-3128-41de-e6cf-5db0868f84fe
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: scp.cloudflare88.eu.org
+    network: ws
+    ws-opts:
+      path: /scp比赛专用节点
+      headers:
+        host: scp.cloudflare88.eu.org
+  - &id003
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 5.161.66.221
+    port: 2083
+    cipher: auto
+    uuid: 47b93627-da5f-4f2a-bcd6-f44ac26b90c4
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
-  - &id012
+    network: http
+  - &id004
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 5.161.44.202
+    port: 2083
+    cipher: auto
+    uuid: 47b93627-da5f-4f2a-bcd6-f44ac26b90c4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id005
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 5.161.71.112
+    port: 2083
+    cipher: auto
+    uuid: 90e968f5-58a5-42ce-a2de-c81894054563
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id006
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 5.161.191.55
+    port: 2083
+    cipher: auto
+    uuid: 90e968f5-58a5-42ce-a2de-c81894054563
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id007
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: singapore.com
-    port: 80
+    server: 5.161.58.40
+    port: 2083
     cipher: auto
-    uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c
+    uuid: 47b93627-da5f-4f2a-bcd6-f44ac26b90c4
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id013
+    network: http
+  - &id008
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
+    server: 5.161.191.195
+    port: 2083
     cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
-  - &id014
-    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡_3
-    type: vmess
-    server: cf.yx.alue.link
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    uuid: 1c5cd450-a5cc-4803-d0ef-1ea424cc4ba2
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lu.wx.alue.link
-  - &id015
+    network: http
+  - &id009
+    name: 🇩🇪_DE_德国_1
+    type: vmess
+    server: 94.130.24.110
+    port: 2083
+    cipher: auto
+    uuid: 90e968f5-58a5-42ce-a2de-c81894054563
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id010
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: 5.78.84.167
+    port: 2083
+    cipher: auto
+    uuid: 90e968f5-58a5-42ce-a2de-c81894054563
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id011
     name: 🇺🇸_US_美国_7
     type: vmess
-    server: 156.225.67.102
-    port: 52792
+    server: 5.161.204.222
+    port: 2083
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: xn2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    uuid: 47b93627-da5f-4f2a-bcd6-f44ac26b90c4
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: xn2.shabijichang.com
-  - &id017
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: vip3.niuniupremium.xyz
-    port: 16928
-    cipher: auto
-    uuid: 4aa447d6-744b-32f9-9a8f-a39ca2f89b60
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /v2ray
-      headers:
-        host: 193.25.215.160
-  - &id018
-    name: 🇭🇰_HK_香港_1
-    type: vmess
-    server: 156.245.8.146
-    port: 42952
-    cipher: auto
-    uuid: 63b4b829-7f01-4e26-b037-f04b1f098765
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇭🇰_HK_香港->🇳🇱_NL_荷兰
-    type: vmess
-    server: 156.245.8.248
-    port: 41671
-    cipher: auto
-    uuid: 964bf499-9ec0-4378-92b6-87d8d861b2d0
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 154.85.1.129
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1685439562518
-      headers:
-        host: www.42077230.xyz
-  - &id021
+    network: http
+  - &id012
     name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 5.161.220.124
+    port: 2083
+    cipher: auto
+    uuid: 47b93627-da5f-4f2a-bcd6-f44ac26b90c4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id013
+    name: 🇺🇸_US_美国_9
     type: vmess
     server: 162.159.143.72
     port: 80
@@ -284,85 +161,121 @@ proxies:
       path: /
       headers:
         host: xui2.xuwu996.eu.org
-  - &id022
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 45.199.138.203
-    port: 41170
-    cipher: auto
-    uuid: de491802-233e-47f2-8c6c-d19bcf5bd56b
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id023
+  - &id014
     name: 🇺🇸_US_美国_10
     type: vmess
-    server: 45.199.138.220
-    port: 55107
+    server: tunneltransfer.bpyjc.com
+    port: 2082
     cipher: auto
-    uuid: 130c9f2e-42b1-4ebf-b345-e26456a061f9
-    alterId: 64
+    uuid: 22fede49-0280-4472-980e-4549f8bcb53c
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇫🇷_FR_法国
-    type: vmess
-    server: 156.249.18.204
-    port: 54885
-    cipher: auto
-    uuid: d3133484-f2bf-4b0c-8d38-f8e645b65687
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id025
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: us.bpyjc.com
+  - &id015
     name: 🇺🇸_US_美国_11
     type: vmess
-    server: 156.225.67.38
+    server: mm3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm3.shabijichang.com
+  - &id016
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: auto
+    uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v006.ssrsub.com
+  - &id017
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 67.21.84.164
     port: 443
     cipher: auto
-    uuid: de491802-233e-47f2-8c6c-d19bcf5bd56b
+    uuid: cff9d860-7330-4ee1-b072-7142ddf1571d
     alterId: 64
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1692256902430
-  - &id026
-    name: 🇨🇿_CZ_捷克
-    type: vmess
-    server: 92.118.149.115
-    port: 25131
-    cipher: auto
-    uuid: ece8262a-141f-42f6-8dcf-e9b7a2028086
-    alterId: 0
-    tls: false
+      path: /path/1694429908748
+      headers:
+        host: www.82615355.xyz
+  - &id018
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 57.128.173.6
+    port: 443
+    udp: true
+    password: 0ddff0f8-04d6-4eae-a5a6-5af7746bb30d
+    sni: fifa.com
     skip-cert-verify: true
     network: tcp
-  - &id027
-    name: 🇺🇸_US_美国_12
+  - &id019
+    name: 🇺🇸_US_美国_14
     type: vmess
-    server: 103.149.144.196
-    port: 35186
+    server: 67.21.90.5
+    port: 443
     cipher: auto
-    uuid: a406e9f8-d80c-45cb-efa1-b63855b79814
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id028
-    name: 🇭🇰_HK_香港_2
-    type: vmess
-    server: 156.245.8.145
-    port: 42952
-    cipher: auto
-    uuid: 63b4b829-7f01-4e26-b037-f04b1f098765
+    uuid: 28dd6c26-05a5-4bba-8a5d-052b70ac13b2
     alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1694429908748
+      headers:
+        host: www.75409854.xyz
+  - &id020
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 64.32.24.222
+    port: 443
+    cipher: auto
+    uuid: cff9d860-7330-4ee1-b072-7142ddf1571d
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/080822272914
+      headers:
+        host: www.82615355.xyz
+  - &id021
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: xn2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: xn2.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -410,13 +323,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -443,13 +349,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
   - name: SELECT
     type: select
     proxies:
@@ -474,13 +373,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
