--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -5,21 +5,10 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 二爷翻墙 https://1808.cf Node_1, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_2, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_3, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: fr.ilovescp.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_4, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_5, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl2.sharecentrepro.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: uk2.scproxy.top}}}
-  - {name: 二爷翻墙 https://1808.cf Node_8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl3.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.scproxy.top}}}
-  - {name: 二爷翻墙 https://1808.cf Node_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
-  - {name: 二爷翻墙 https://1808.cf Node_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
-  - {name: 二爷翻墙 https://1808.cf Node_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.ilovescp.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf Node_1, server: 155.94.235.109, port: 46166, type: vmess, uuid: 4dd5fa96-4a73-45cc-ebf7-d968323c53a5, alterId: 0, cipher: auto, tls: false}
+  - {name: 二爷翻墙 https://1808.cf Node_2, server: csgo.com, port: 443, type: vmess, uuid: 6383e7fb-3128-41de-e6cf-5db0868f84fe, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /scp比赛专用节点, headers: {Host: scp.cloudflare88.eu.org}}}
+  - {name: 二爷翻墙 https://1808.cf Node_3, server: share.relay.wiki, port: 443, type: vmess, uuid: 3b651a5b-546f-4ae1-83eb-34fd403dca80, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /3b651a5b-546f-4ae1-83eb-34fd403dca80, headers: {Host: share.relay.wiki}}}
+  - {name: 二爷翻墙 https://1808.cf Node_4, server: cdn-downloads.000023.xyz, port: 443, type: trojan, password: A3A1371F-017B-4A5A-99F2-8F4AFF0798B1, sni: downloads.000023.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
@@ -30,17 +19,6 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_2
       - 二爷翻墙 https://1808.cf Node_3
       - 二爷翻墙 https://1808.cf Node_4
-      - 二爷翻墙 https://1808.cf Node_5
-      - 二爷翻墙 https://1808.cf Node_6
-      - 二爷翻墙 https://1808.cf Node_7
-      - 二爷翻墙 https://1808.cf Node_8
-      - 二爷翻墙 https://1808.cf Node_9
-      - 二爷翻墙 https://1808.cf Node_10
-      - 二爷翻墙 https://1808.cf Node_11
-      - 二爷翻墙 https://1808.cf Node_12
-      - 二爷翻墙 https://1808.cf Node_13
-      - 二爷翻墙 https://1808.cf Node_14
-      - 二爷翻墙 https://1808.cf Node_15
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -51,17 +29,6 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_2
       - 二爷翻墙 https://1808.cf Node_3
       - 二爷翻墙 https://1808.cf Node_4
-      - 二爷翻墙 https://1808.cf Node_5
-      - 二爷翻墙 https://1808.cf Node_6
-      - 二爷翻墙 https://1808.cf Node_7
-      - 二爷翻墙 https://1808.cf Node_8
-      - 二爷翻墙 https://1808.cf Node_9
-      - 二爷翻墙 https://1808.cf Node_10
-      - 二爷翻墙 https://1808.cf Node_11
-      - 二爷翻墙 https://1808.cf Node_12
-      - 二爷翻墙 https://1808.cf Node_13
-      - 二爷翻墙 https://1808.cf Node_14
-      - 二爷翻墙 https://1808.cf Node_15
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -72,17 +39,6 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_2
       - 二爷翻墙 https://1808.cf Node_3
       - 二爷翻墙 https://1808.cf Node_4
-      - 二爷翻墙 https://1808.cf Node_5
-      - 二爷翻墙 https://1808.cf Node_6
-      - 二爷翻墙 https://1808.cf Node_7
-      - 二爷翻墙 https://1808.cf Node_8
-      - 二爷翻墙 https://1808.cf Node_9
-      - 二爷翻墙 https://1808.cf Node_10
-      - 二爷翻墙 https://1808.cf Node_11
-      - 二爷翻墙 https://1808.cf Node_12
-      - 二爷翻墙 https://1808.cf Node_13
-      - 二爷翻墙 https://1808.cf Node_14
-      - 二爷翻墙 https://1808.cf Node_15
   - name: 📲 电报信息
     type: select
     proxies:
@@ -92,17 +48,6 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_2
       - 二爷翻墙 https://1808.cf Node_3
       - 二爷翻墙 https://1808.cf Node_4
-      - 二爷翻墙 https://1808.cf Node_5
-      - 二爷翻墙 https://1808.cf Node_6
-      - 二爷翻墙 https://1808.cf Node_7
-      - 二爷翻墙 https://1808.cf Node_8
-      - 二爷翻墙 https://1808.cf Node_9
-      - 二爷翻墙 https://1808.cf Node_10
-      - 二爷翻墙 https://1808.cf Node_11
-      - 二爷翻墙 https://1808.cf Node_12
-      - 二爷翻墙 https://1808.cf Node_13
-      - 二爷翻墙 https://1808.cf Node_14
-      - 二爷翻墙 https://1808.cf Node_15
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
@@ -112,17 +57,6 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_2
       - 二爷翻墙 https://1808.cf Node_3
       - 二爷翻墙 https://1808.cf Node_4
-      - 二爷翻墙 https://1808.cf Node_5
-      - 二爷翻墙 https://1808.cf Node_6
-      - 二爷翻墙 https://1808.cf Node_7
-      - 二爷翻墙 https://1808.cf Node_8
-      - 二爷翻墙 https://1808.cf Node_9
-      - 二爷翻墙 https://1808.cf Node_10
-      - 二爷翻墙 https://1808.cf Node_11
-      - 二爷翻墙 https://1808.cf Node_12
-      - 二爷翻墙 https://1808.cf Node_13
-      - 二爷翻墙 https://1808.cf Node_14
-      - 二爷翻墙 https://1808.cf Node_15
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -132,17 +66,6 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_2
       - 二爷翻墙 https://1808.cf Node_3
       - 二爷翻墙 https://1808.cf Node_4
-      - 二爷翻墙 https://1808.cf Node_5
-      - 二爷翻墙 https://1808.cf Node_6
-      - 二爷翻墙 https://1808.cf Node_7
-      - 二爷翻墙 https://1808.cf Node_8
-      - 二爷翻墙 https://1808.cf Node_9
-      - 二爷翻墙 https://1808.cf Node_10
-      - 二爷翻墙 https://1808.cf Node_11
-      - 二爷翻墙 https://1808.cf Node_12
-      - 二爷翻墙 https://1808.cf Node_13
-      - 二爷翻墙 https://1808.cf Node_14
-      - 二爷翻墙 https://1808.cf Node_15
   - name: 📢 谷歌FCM
     type: select
     proxies:
@@ -153,17 +76,6 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_2
       - 二爷翻墙 https://1808.cf Node_3
       - 二爷翻墙 https://1808.cf Node_4
-      - 二爷翻墙 https://1808.cf Node_5
-      - 二爷翻墙 https://1808.cf Node_6
-      - 二爷翻墙 https://1808.cf Node_7
-      - 二爷翻墙 https://1808.cf Node_8
-      - 二爷翻墙 https://1808.cf Node_9
-      - 二爷翻墙 https://1808.cf Node_10
-      - 二爷翻墙 https://1808.cf Node_11
-      - 二爷翻墙 https://1808.cf Node_12
-      - 二爷翻墙 https://1808.cf Node_13
-      - 二爷翻墙 https://1808.cf Node_14
-      - 二爷翻墙 https://1808.cf Node_15
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -190,17 +102,6 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_2
       - 二爷翻墙 https://1808.cf Node_3
       - 二爷翻墙 https://1808.cf Node_4
-      - 二爷翻墙 https://1808.cf Node_5
-      - 二爷翻墙 https://1808.cf Node_6
-      - 二爷翻墙 https://1808.cf Node_7
-      - 二爷翻墙 https://1808.cf Node_8
-      - 二爷翻墙 https://1808.cf Node_9
-      - 二爷翻墙 https://1808.cf Node_10
-      - 二爷翻墙 https://1808.cf Node_11
-      - 二爷翻墙 https://1808.cf Node_12
-      - 二爷翻墙 https://1808.cf Node_13
-      - 二爷翻墙 https://1808.cf Node_14
-      - 二爷翻墙 https://1808.cf Node_15
 rules:
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
